--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
 (function(){
   'use strict';
   var _fetch = window.fetch ? window.fetch.bind(window) : null;
+
+  // Robust JSON parser that will not throw if server returns HTML/error body
+  async function jsonSafe(res){
+    try{
+      return await res.clone().json();
+    }catch(e){
+      try{
+        const txt = await res.text();
+        const trimmed = txt.replace(/^\)\]\}'\n/, '').trim();
+        if (trimmed && (trimmed[0] === '{' || trimmed[0] === '[')){
+          return JSON.parse(trimmed);
+        }
+        console.warn('jsonSafe: non-JSON response', trimmed.slice(0,120));
+        return { status:'error', message:'Non-JSON response', raw: trimmed.slice(0,500) };
+      }catch(err){
+        console.warn('jsonSafe: failed to read body', err);
+        return { status:'error', message:String(err) };
+      }
+    }
+  }
   if (!_fetch) return;
 
   function getIdToken(){
@@ -102,9 +122,7 @@
     try{
       var base = endpoint(); var t = token();
       var url = base + (base.indexOf('?')>=0?'&':'?') + 'action=getVoucherICSet' + (t?('&id_token='+encodeURIComponent(t)):'');
-      var r = await fetch(url);
-      var __txt = await r.text();
-      var j; try{ j = JSON.parse(__txt); }catch(e){ console.warn('Build voucher set failed', e, __txt.slice(0,120)); j = { ics: [] }; }
+      var r = await fetch(url); var j = await jsonSafe(r);
       window.__voucherICS = (j && j.ics) || [];
       return j;
     } catch(err) {
@@ -218,8 +236,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
   <!-- Chart.js + Datalabels -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
 
   <!-- SheetJS (Excel) via CDN -->
 <!-- XLSX robust loader + override (SIAP TAMPAL DI <head>
@@ -272,10 +290,22 @@
 </script>
 
   <!-- Google Identity Services (Sign-In) -->
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <script>
+  (function(){
+    try{
+      var tok = sessionStorage.getItem('id_token') || sessionStorage.getItem('ID_TOKEN') || localStorage.getItem('id_token') || localStorage.getItem('ID_TOKEN');
+      if (!tok){
+        var s = document.createElement('script');
+        s.src = 'https://accounts.google.com/gsi/client';
+        s.async = true; s.defer = true;
+        document.head.appendChild(s);
+      }
+    }catch(e){}
+  })();
+  </script>
 
   <!-- html2canvas untuk tangkap preview → imej (BARU) -->
-  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 
 <style>
   :root{ --primary:#2c3e50; --secondary:#3498db; --success:#27ae60; --warning:#f39c12; --danger:#e74c3c; --light:#ecf0f1; --dark:#34495e; --muted:#95a5a6; }
@@ -544,6 +574,7 @@
 <body>
   <!-- Global Loader -->
   <div id="appLoader" aria-hidden="true">
+    <div class="visually-hidden" aria-live="polite"></div>
     <div class="loader-card">
       <div class="spinner-premium"></div>
       <div class="fw-bold">Sila tunggu…</div>
@@ -1283,7 +1314,7 @@
     </div></div>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
 /* =======================
    KONFIG (EDIT INI SAHAJA)
@@ -1812,7 +1843,7 @@ async function handleCredentialResponse(resp){
     headers:{ 'Content-Type':'application/x-www-form-urlencoded' },
     body: new URLSearchParams({ action:'whoami', id_token: ID_TOKEN })
   });
-  const j = await r.json();
+  const j = await jsonSafe(r);
   if (j.status === 'success'){
     STAFF_EMAIL = j.email || '';
     document.getElementById('staffBadge').classList.remove('d-none');
@@ -1858,7 +1889,7 @@ async function getJSON(params={}, {silent=false, msg='Memuat data…'}={}){
       fetch(url, { method:'GET' }),
       new Promise((_,rej)=> setTimeout(()=>rej(new Error('Timeout')), 12000))
     ]);
-    return await r.json();
+    return await jsonSafe(r);
   } finally { if (!silent) hideLoader(); }
 }
 
@@ -1874,7 +1905,7 @@ async function postForm(params={}, {silent=false, msg='Menyimpan data…'}={}){
       }),
       new Promise((_,rej)=> setTimeout(()=>rej(new Error('Timeout')), 12000))
     ]);
-    return await r.json();
+    return await jsonSafe(r);
   } finally { if (!silent) hideLoader(); }
 }
 
@@ -4086,7 +4117,7 @@ async function uploadPDPA(){
         fileBase64: pure64, fileName: file.name, fileType: file.type || 'application/octet-stream'
       })
     });
-    const json = await res.json();
+    const json = await jsonSafe(res);
     if (json.status === 'success'){
       pdpaModal.hide();
       toast('Berjaya','PDPA dimuat naik','success');
@@ -4541,7 +4572,7 @@ const saveNadiStateDebounced = debounce(saveNadiState, 400);
           form.set('tarikhTCA', r.voucherDate || programDate || '');
           form.set('masaTCA', masa);
           const res = await fetch(SCRIPT_URL, { method:'POST', body: form });
-          const j = await res.json().catch(()=>({}));
+          const j = await jsonSafe(res).catch(()=>({}));
           if (j && j.status === 'success') {
             if (typeof toast === 'function') toast('Berjaya', `Voucher TCA didaftarkan untuk ${r.nama || r.ic}`, 'success');
           } else {
@@ -4575,7 +4606,7 @@ const saveNadiStateDebounced = debounce(saveNadiState, 400);
     try{
       const qs = new URLSearchParams({ action:'getNadiActivities', id_token: (window.ID_TOKEN||'') });
       const res = await fetch(`${window.SCRIPT_URL}?${qs.toString()}`);
-      const j = await res.json();
+      const j = await jsonSafe(res);
       if (!j || j.status!=='success') throw new Error(j && (j.message||j.code) || 'Gagal ambil program');
       const data = Array.isArray(j.data) ? j.data : [];
       list.innerHTML = data.map(item=>{
@@ -4602,7 +4633,7 @@ const saveNadiStateDebounced = debounce(saveNadiState, 400);
     try{
       const qs = new URLSearchParams({ action:'getNadiActivityDetail', id: activityId, id_token: (window.ID_TOKEN||'') });
       const res = await fetch(`${window.SCRIPT_URL}?${qs.toString()}`);
-      const j = await res.json();
+      const j = await jsonSafe(res);
       if (!j || j.status!=='success') throw new Error(j && (j.message||j.code) || 'Gagal ambil detail');
       const rows = Array.isArray(j.data) ? j.data : [];
       if (!rows.length){ tbody.innerHTML = '<tr><td colspan="13" class="text-center text-muted">Tiada data.</td></tr>'; return; }
@@ -5182,7 +5213,7 @@ if (btn) {
     try{
       const qs = new URLSearchParams({ action:'getNadiActivities', id_token: (window.ID_TOKEN||'') });
       const res = await fetch(`${window.SCRIPT_URL}?${qs.toString()}`, { credentials:'omit' });
-      const j = await res.json();
+      const j = await jsonSafe(res);
       if (!j || j.status!=='success') throw new Error((j && (j.message||j.code)) || 'Gagal ambil program');
       const data = Array.isArray(j.data) ? j.data : [];
       if (!data.length){
@@ -5222,7 +5253,7 @@ if (btn) {
     try{
       const qs = new URLSearchParams({ action:'getNadiActivityDetail', id: activityId, id_token: (window.ID_TOKEN||'') });
       const res = await fetch(`${window.SCRIPT_URL}?${qs.toString()}`, { credentials:'omit' });
-      const j = await res.json();
+      const j = await jsonSafe(res);
       if (!j || j.status!=='success') throw new Error((j && (j.message||j.code)) || 'Gagal ambil detail');
       const rows = Array.isArray(j.data) ? j.data : [];
       if (!rows.length){
@@ -5284,7 +5315,7 @@ if (btn) {
     const t = setTimeout(()=>ctl.abort(), timeoutMs);
     try{
       const res = await fetch(url, { ...opt, signal: ctl.signal, credentials:'omit' });
-      return await res.json().catch(()=>({status:'error'}));
+      return await jsonSafe(res).catch(()=>({status:'error'}));
     } finally { clearTimeout(t); }
   }
   function ensureGlobals(){
@@ -5503,7 +5534,7 @@ if (btn) {
     const ctl = new AbortController(); const t = setTimeout(()=>ctl.abort(), 20000);
     try{
       const res = await fetch(url, { signal: ctl.signal, credentials:'omit' });
-      return await res.json();
+      return await jsonSafe(res);
     } finally { clearTimeout(t); }
   }
 
@@ -5747,7 +5778,19 @@ if (btn) {
 
 
 <!-- Google Identity (wajib untuk id_token) -->
-<script src="https://accounts.google.com/gsi/client" async defer></script>
+<script>
+  (function(){
+    try{
+      var tok = sessionStorage.getItem('id_token') || sessionStorage.getItem('ID_TOKEN') || localStorage.getItem('id_token') || localStorage.getItem('ID_TOKEN');
+      if (!tok){
+        var s = document.createElement('script');
+        s.src = 'https://accounts.google.com/gsi/client';
+        s.async = true; s.defer = true;
+        document.head.appendChild(s);
+      }
+    }catch(e){}
+  })();
+  </script>
 <script>
 (() => {
   'use strict';
@@ -5782,7 +5825,7 @@ if (btn) {
     const q=new URLSearchParams({...params, id_token: ID_TOKEN});
     const res = await fetch(`${SCRIPT_URL}?${q}`, { method:'GET' });
     if(!res.ok) throw new Error(`HTTP ${res.status}`);
-    return res.json();
+    return jsonSafe(res);
   }
 
   function renderList(items){
@@ -6249,11 +6292,11 @@ function injectTelahHadirButtons(){
   async function _postForm(payload){ try{ if (typeof postForm==='function') return await postForm(payload); }catch(e){} 
     const form = new URLSearchParams(); Object.entries(payload||{}).forEach(([k,v])=>form.append(k, v));
     const res = await fetch(location.href, { method:'POST', headers:{'Content-Type':'application/x-www-form-urlencoded'}, body: form.toString() });
-    return await res.json();
+    return await jsonSafe(res);
   }
   async function _getJSON(payload){ try{ if (typeof getJSON==='function') return await getJSON(payload); }catch(e){}
     const params = new URLSearchParams(payload||{}); const res = await fetch(location.pathname + '?' + params.toString());
-    return await res.json();
+    return await jsonSafe(res);
   }
 
   // Permanent Delete for Arkib page
@@ -6464,7 +6507,7 @@ function __toVoucherPayload(payload){
       var t = (window.ID_TOKEN || sessionStorage.getItem('id_token') || sessionStorage.getItem('ID_TOKEN') || localStorage.getItem('id_token') || localStorage.getItem('ID_TOKEN') || '').trim();
       if (t && !q.get('id_token')) q.set('id_token', t);
     }catch(e){}
-    return fetch(window.SCRIPT_URL + '?' + q.toString(), { method:'GET' }).then(function(r){ return r.json(); });
+    return fetch(window.SCRIPT_URL + '?' + q.toString(), { method:'GET' }).then(function(r){ return jsonSafe(r); });
   }
 
   var __rows = [];
@@ -6613,16 +6656,77 @@ function __toVoucherPayload(payload){
   else { onHash(); }
 })();
 </script>
-<script>
-document.addEventListener('DOMContentLoaded', function(){
-  try{
-    var list = document.getElementById('programList');
-    if ((location.hash && location.hash.indexOf('#sejarah')===0) || list){
-      if (typeof window.loadPrograms === 'function') window.loadPrograms();
-    }
-  }catch(e){}
-});
 
+<script>
+// ---- Auto-render Sejarah Saringan list without needing manual sort ----
+(function(){
+  function safe(fn){ try{ fn && fn(); }catch(e){} }
+  function ensureFirstActive(){
+    var list = document.getElementById('programList');
+    if (!list) return;
+    var active = list.querySelector('.list-group-item.active');
+    var first  = list.querySelector('.list-group-item');
+    if (!active && first){
+      first.classList.add('active');
+      if (typeof first.click === 'function') { try{ first.click(); }catch(e){} }
+      safe(function(){
+        if (typeof window.loadProgramDetail === 'function' && first.dataset && first.dataset.id){
+          window.loadProgramDetail(first.dataset.id);
+        }
+      });
+    }
+  }
+  if (!window.__loadProgramsWrapped && typeof window.loadPrograms === 'function'){
+    window.__loadProgramsWrapped = true;
+    const _orig = window.loadPrograms;
+    window.loadPrograms = async function(){
+      let ret;
+      try{ ret = _orig.apply(this, arguments); }catch(e){ ret = undefined; }
+      try{ await Promise.resolve(ret); }catch(e){}
+      safe(function(){
+        if (typeof window.renderProgramList === 'function') window.renderProgramList();
+      });
+      ensureFirstActive();
+      return ret;
+    };
+  }
+  function autoSejarah(){
+    var isSejarah = (location.hash||'').indexOf('#sejarah')===0 || !!document.getElementById('programList');
+    if (!isSejarah) return;
+    if (typeof window.loadPrograms === 'function'){
+      try{
+        const done = window.loadPrograms();
+        Promise.resolve(done).finally(function(){
+          safe(function(){
+            if (typeof window.renderProgramList === 'function') window.renderProgramList();
+          });
+          ensureFirstActive();
+        });
+      }catch(e){
+        safe(function(){
+          if (typeof window.renderProgramList === 'function') window.renderProgramList();
+        });
+        ensureFirstActive();
+      }
+    }
+  }
+  document.addEventListener('DOMContentLoaded', autoSejarah);
+  window.addEventListener('hashchange', autoSejarah);
+  (function observeToken(){
+    var tries = 0;
+    var iv = setInterval(function(){
+      tries++;
+      var tok = sessionStorage.getItem('id_token') || sessionStorage.getItem('ID_TOKEN') ||
+                localStorage.getItem('id_token')  || localStorage.getItem('ID_TOKEN');
+      if (tok){
+        autoSejarah();
+        clearInterval(iv);
+      }
+      if (tries > 10) clearInterval(iv);
+    }, 500);
+  })();
+})();
 </script>
+
 </body>
 </html>
